--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-
   <h1 id="title">My Drum Kit 🥁</h1>
-
   <div class="set">
     <button class="a drum">a</button>
     <button class="s drum">s</button>
@@ -20,10 +18,9 @@
     <button class="j drum">j</button>
     <button class="k drum">k</button>
     <button class="l drum">l</button>
-  </div>
-
+  </div> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="index.js" charset="utf-8"></script>
-
   <footer>
     <p>
       <em>Made with ❤️ by</em>
